add projectId to dynamic data and test
