# app/dynamic_data/internal/dto/collection.go
@@ -3,6 +3,7 @@ package dto
 type Collection struct {
 	Id        int32
 	Name      string
+	ProjectId string
 	DataKeys  []string
 	DataTypes []int32
 }
@@ -15,6 +16,7 @@ type ListCollections struct {
 type GetCollection struct {
 	Id        int32
 	Name      string
+	ProjectId string
 	DataKeys  []string
 	DataTypes []int32
 	Documents []Document
